--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 pandas = "^2.2.3"
 tqdm = "^4.66.6"
+duckdb = "^1.1.2"
+streamlit = "^1.39.0"
 
 
 [build-system]
